test/fail/Sections-9.agda
open import Common.Prelude

⟨_⟩_ : Bool → Bool → Bool
⟨ _ ⟩_ = λ b → b
